[lworld] serviceability/sa/CDSJMapClstats.java fails: No suitable match for type of address

XMLWordPrintable

      This happens with the fix in JDK-8272290, plus the patch https://bugs.openjdk.java.net/secure/attachment/95973/refval-v1.patch

      --- ProcessLog ---
      cmd: /home/iklam/jdk/bld/fastdebug/images/jdk/bin/jhsdb -J-XX:MaxRAMPercentage=3.142 -J-XX:InitialRAMPercentage=0.5 jmap --clstats --pid 17792
      exitvalue: 1
      stderr: finding class loader instances ..done.
      computing per loader stat ..sun.jvm.hotspot.types.WrongTypeException: No suitable match for type of address 0x0000000800120000
      at jdk.hotspot.agent/sun.jvm.hotspot.runtime.InstanceConstructor.newWrongTypeException(InstanceConstructor.java:62)
      at jdk.hotspot.agent/sun.jvm.hotspot.runtime.VirtualBaseConstructor.instantiateWrapperFor(VirtualBaseConstructor.java:111)
      at jdk.hotspot.agent/sun.jvm.hotspot.oops.Metadata.instantiateWrapperFor(Metadata.java:76)
      at jdk.hotspot.agent/sun.jvm.hotspot.oops.MetadataField.getValue(MetadataField.java:43)
      at jdk.hotspot.agent/sun.jvm.hotspot.oops.MetadataField.getValue(MetadataField.java:40)
      at jdk.hotspot.agent/sun.jvm.hotspot.oops.Klass.getNextLinkKlass(Klass.java:125)
      at jdk.hotspot.agent/sun.jvm.hotspot.classfile.ClassLoaderData.classesDo(ClassLoaderData.java:101)
      at jdk.hotspot.agent/sun.jvm.hotspot.classfile.ClassLoaderDataGraph.classesDo(ClassLoaderDataGraph.java:84)
      at jdk.hotspot.agent/sun.jvm.hotspot.tools.ClassLoaderStats.printClassLoaderStatistics(ClassLoaderStats.java:111)
      at jdk.hotspot.agent/sun.jvm.hotspot.tools.ClassLoaderStats.run(ClassLoaderStats.java:78)
      at jdk.hotspot.agent/sun.jvm.hotspot.tools.JMap.run(JMap.java:121)
      at jdk.hotspot.agent/sun.jvm.hotspot.tools.Tool.startInternal(Tool.java:278)
      at jdk.hotspot.agent/sun.jvm.hotspot.tools.Tool.start(Tool.java:241)
      at jdk.hotspot.agent/sun.jvm.hotspot.tools.Tool.execute(Tool.java:134)
      at jdk.hotspot.agent/sun.jvm.hotspot.tools.JMap.main(JMap.java:202)
      at jdk.hotspot.agent/sun.jvm.hotspot.SALauncher.runJMAP(SALauncher.java:340)
      at jdk.hotspot.agent/sun.jvm.hotspot.SALauncher.main(SALauncher.java:500)

      stdout: Attaching to process ID 17792, please wait...
      Debugger attached successfully.
      Server compiler detected.
      JVM version is 18-internal+0-adhoc.iklam.open

            Assignee:
            Ioi Lam
            Reporter:
            Ioi Lam
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: