8272400: [lworld] serviceability/sa/CDSJMapClstats.java fails: No suitable match for type of address